<resources>
    <string name="app_name">Upload Photo</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_my_photos">My Photos</string>
    <string name="menu_new_photo">New Photo</string>
    <string name="menu_single_photo">Single Photo</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_exit">Exit</string>
    <string name="login">Login</string>
    <string name="mail">E-Mail</string>
    <string name="pass">PassWord</string>
    <string name="confirmpass">Confirm PassWord</string>
    <string name="usersignup">Sign Up</string>
    <string name="forgetPass">Forget Password</string>
    <string name="signin">Sign in</string>
    <string name="phoneregister">Phone Register</string>
    <string name="register">Register</string>
    <string name="phoneno">Phone Number</string>
    <string name="fullname">Full Name</string>
    <string name="address">Address</string>
    <string name="smscode">SMS Cose</string>
    <string name="checkpasslength">password must be more 5 ch</string>
    <string name="checkpassconfirm">password confirm not same</string>
    <string name="checkfullname">fullname too short</string>
    <string name="checkaddress">address too shot</string>
    <string name="checkmail">invalid mail</string>
    <string name="sendcode">Send Code</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="shope">Shope</string>
    <string name="menu_refused_requestes">Refused Requestes</string>
    <string name="menu_accepted_requestes">Accepted Requestes</string>
    <string name="menu_new_requeste">New Requeste</string>
    <string name="menu_history">History</string>
    <string name="default_web_client_id">158380089338-ir1ujrelplvp7vl0ejqk5nraqhjf6i3n.apps.googleusercontent.com</string>


</resources>