<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_photos"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_my_photos" />
        <item
            android:id="@+id/nav_new_photo"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_new_photo" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_logout" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_exit" />
    </group>
</menu>